# CodexSwitcher

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: rustc-wrapper.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  keychain.rs  lib.rs  profile_manager.rs
src/components/: ActivityLogView.tsx  BackupsView.tsx  DashboardView.tsx  LockScreen.tsx  ProfilesView.tsx  SettingsView.tsx  Sidebar.tsx
