[package]
name = "codexswitcher"
version = "1.0.0"
description = "CodexSwitcher"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
dirs = "5.0"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[profile.release]
opt-level = "z"       # Optimize for binary size
lto = true            # Link-Time Optimization — strips dead code across all crates
codegen-units = 1     # Single codegen unit for maximum LTO effectiveness
panic = "abort"       # Removes panic unwinding machinery (~200 KB saved)
strip = true          # Strips debug symbols from the final binary
